# weeklybeatsscraper

./: .pre-commit-config.yaml  Pipfile  README.md  example.html  page-example.html  pyproject.toml  requirements.txt  trackscraper.py  weeklybeatswatcher.py
