[project]
name = "weeklybeatswatcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "ipython>=9.9.0",
    "matplotlib>=3.10.8",
    "mutagen>=1.47.0",
    "numpy>=2.4.0",
    "opencv-python>=4.11.0.86",
    "pillow>=12.1.0",
    "requests>=2.32.5",
    "ruff>=0.14.10",
    "scipy>=1.16.3",
    "simple-term-menu>=1.6.6",
    "tqdm>=4.67.1",
]
